cluster-applications/knative/net-certmanager.yaml

---
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: config.webhook.net-certmanager.networking.internal.knative.dev
  labels:
    app.kubernetes.io/component: net-certmanager
    app.kubernetes.io/version: "1.8.1"
    app.kubernetes.io/name: knative-serving
    networking.knative.dev/certificate-provider: cert-manager
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: net-certmanager-webhook
        namespace: knative-serving
    failurePolicy: Fail
    sideEffects: None
    name: config.webhook.net-certmanager.networking.internal.knative.dev
    objectSelector:
      matchLabels:
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/component: net-certmanager

---
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-certmanager-controller
  namespace: knative-serving
  labels:
    app.kubernetes.io/component: net-certmanager
    app.kubernetes.io/version: "1.8.1"
    app.kubernetes.io/name: knative-serving
    networking.knative.dev/certificate-provider: cert-manager
spec:
  selector:
    matchLabels:
      app: net-certmanager-controller
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: net-certmanager-controller
        app.kubernetes.io/component: net-certmanager
        app.kubernetes.io/version: "1.8.1"
        app.kubernetes.io/name: knative-serving
    spec:
      serviceAccountName: controller
      containers:
        - name: controller
          # This is the Go import path for the binary that is containerized
          # and substituted here.
          image: gcr.io/knative-releases/knative.dev/net-certmanager/cmd/controller@sha256:40719b15ecdb5556b20700c5184cf8fe2fd37f8b29d47ef1ebbbf3266683fd5f
          resources:
            requests:
              cpu: 30m
              memory: 40Mi
            limits:
              cpu: 300m
              memory: 400Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - all
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: net-certmanager-controller
    app.kubernetes.io/component: net-certmanager
    app.kubernetes.io/version: "1.8.1"
    app.kubernetes.io/name: knative-serving
    networking.knative.dev/certificate-provider: cert-manager
  name: net-certmanager-controller
  namespace: knative-serving
spec:
  ports:
    # Define metrics and profiling for them to be accessible within service meshes.
    - name: http-metrics
      port: 9090
      targetPort: 9090
    - name: http-profiling
      port: 8008
      targetPort: 8008
  selector:
    app: net-certmanager-controller

---
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-certmanager-webhook
  namespace: knative-serving
  labels:
    app.kubernetes.io/component: net-certmanager
    app.kubernetes.io/version: "1.8.1"
    app.kubernetes.io/name: knative-serving
    networking.knative.dev/certificate-provider: cert-manager
spec:
  selector:
    matchLabels:
      app: net-certmanager-webhook
      role: net-certmanager-webhook
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app: net-certmanager-webhook
        app.kubernetes.io/component: net-certmanager
        app.kubernetes.io/version: "1.8.1"
        app.kubernetes.io/name: knative-serving
        role: net-certmanager-webhook
    spec:
      serviceAccountName: controller
      containers:
        - name: webhook
          # This is the Go import path for the binary that is containerized
          # and substituted here.
          image: gcr.io/knative-releases/knative.dev/net-certmanager/cmd/webhook@sha256:8ab7ad32f55e5898a936a665be15cddb482dea5d9359a516689172cadd52ec1b
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 200m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - all
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
            - name: https-webhook
              containerPort: 8443

---
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: net-certmanager-webhook
  namespace: knative-serving
  labels:
    role: net-certmanager-webhook
    app.kubernetes.io/component: net-certmanager
    app.kubernetes.io/version: "1.8.1"
    app.kubernetes.io/name: knative-serving
    networking.knative.dev/certificate-provider: cert-manager
spec:
  ports:
    # Define metrics and profiling for them to be accessible within service meshes.
    - name: http-metrics
      port: 9090
      targetPort: 9090
    - name: http-profiling
      port: 8008
      targetPort: 8008
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    app: net-certmanager-webhook

---
